# pacta-backend

./: .env.example  .gitignore  API_DOCUMENTATION.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  tests.yml
api/: alembic.ini  pyproject.toml  pytest.ini
api/src/: config.py  main.py  openapi.py
api/src/api/v1/: __init__.py
api/src/api/v1/endpoints/: auth.py  clients.py  contracts.py  signatories.py  supplements.py  suppliers.py  users.py
api/src/db/: session.py
api/src/middleware/: exceptions.py  logging_middleware.py
api/src/models/: __init__.py  audit_log.py  base.py  client.py  contract.py  document.py  notification.py  signatory.py  supplement.py  supplier.py  user.py
api/src/services/: auth.py  client.py  contract.py  signatory.py  supplement.py  supplier.py  user.py
api/tests/: conftest.py  test_auth_endpoints.py  test_client_endpoints.py  test_supplier_endpoints.py  test_user_endpoints.py
api/tests/unit/: test_security.py
docs/: STRUCTURE.md
shared/: pyproject.toml
shared/src/: enums.py  exceptions.py  logging.py  security.py
workers/: pyproject.toml
