[tool.poetry]
name = "pacta-backend"
version = "2.0.0"
description = "PACTA Backend — Contract Lifecycle Management System"
authors = ["PACTA Team <team@pacta.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
black = "^24.1.1"
ruff = "^0.3.0"
mypy = "^1.7"
pytest = "^7.4"
pytest-asyncio = "^0.21.0"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["api/tests", "workers/tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]
